--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".ShimmerActivity" />
         <activity android:name=".WaveActivity" />
+        <activity android:name=".ExplosionActivity" />
     </application>
 
 </manifest>
